# verify-eth-signature-on-near

./: .gitignore  .gitpod.yml  README.md  package-lock.json  package.json
contract/: Cargo.toml
contract/src/: lib.rs
ethereum/: eip712.sol
integration-tests/: package-lock.json  package.json
integration-tests/src/: main.ava.ts
